--- a/b02/html/HomePage.html
+++ b/b02/html/HomePage.html
@@ -11,8 +11,8 @@
     <h1>スーパーマーケット</h1>
     <img src="../img/Logo.jpg" alt="DON'T STARVE TOGETHER"class="logo">
     <div class="container">
-        <button class="buttonC"><a href="./Cart.html" class="linkC">購入者向け</a></button>
-        <botton class="buttonP"><a href="./ProductManagement.html" class="linkP">出品者向け</a></botton>
+        <button onclick="window.location.href='./Cart.html'" class="buttonC">購入者向け</button>
+        <botton onclick="window.location.href='./ProductManagement.html'" class="buttonP"">出品者向け</a></botton>
     </div>
     <div class="footer">
         <p> Don't Starve Together スーパー</p>
