--- a/b02/html/Addproduct.html
+++ b/b02/html/Addproduct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>商品追加</title>
     <link rel="stylesheet" href="../css/Addproduct.css">
-    <script src="../js/addproduct.js" defer></script>
+    <script src="../js/Addproduct.js" defer></script>
 </head>
 <body>
 
@@ -39,6 +39,7 @@
             <div class="form-row">
                 <label for="imageInput">イメージ</label>
                 <input type="file" id="imageInput" accept="image/*">
+                <img id="preview" alt="プレビュー" style="max-width: 200px; display: block; margin-top: 8px;">
                 <div id="imgError" class="error"></div>
             </div>
             <div class="form-buttons">
