--- a/b02/html/ProductManagement.html
+++ b/b02/html/ProductManagement.html
@@ -19,8 +19,8 @@
     <div class="container">
         <div class="navigation"> 
             <span>リスト</span>
-            <span><a href="">在庫</a></span>
-            <span><a>お客様の注文</a></span>
+            <span><a href="/html/ProductDetails.html">商品の詳細情報</a></span>
+            <span><a　href="">お客様の注文</a></span>
             <hr>
             <button onclick="window.location.href='/html/HomePage.html'">sign out</button>
         </div>
@@ -30,7 +30,6 @@
             <div class="Displaypage">
 
                 <table style="border: 1px solid; border-collapse: collapse;">
-
                     <thead>
                         <tr>
                             <th id="code">コード</th>
@@ -49,6 +48,6 @@
             </div>
         </div>
     </div>
-
+    <script src="../js/DefaultProducts.js"></script> 
     <script src="../js/ProductManagement.js"></script>
 </html>
