--- a/b02/html/Addproduct.html
+++ b/b02/html/Addproduct.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>商品追加</title>
+    <title>商品追加（編集）</title>
     <link rel="stylesheet" href="../css/Addproduct.css">
     <script src="../js/Addproduct.js" defer></script>
 </head>
