--- a/b02/html/HomePage.html
+++ b/b02/html/HomePage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
- <meta charset="UTF-8">
+ <meta charset="UTF-8">SS
  <meta http-equiv="x-ua-compatible" content="IE=edge">
  <meta name=”author” content="ke2b, DON'T STARVE TOGETHER">
  <title>HomePage</title>
@@ -12,7 +12,7 @@
     <img src="../img/Logo.jpg" alt="DON'T STARVE TOGETHER"class="logo">
     <div class="container">
         <button onclick="window.location.href='./Cart.html'" class="buttonC">購入者向け</button>
-        <botton onclick="window.location.href='./ProductManagement.html'" class="buttonP"">出品者向け</a></botton>
+        <button type="button" class="buttonP" onclick="window.location.href='../security/html/ADlogin.html'">出品者向け</button>
     </div>
     <div class="footer">
         <p> Don't Starve Together スーパー</p>
