--- a/b02/html/HomePage.html
+++ b/b02/html/HomePage.html
@@ -11,7 +11,7 @@
     <h1>スーパーマーケット</h1>
     <img src="../img/Logo.jpg" alt="DON'T STARVE TOGETHER"class="logo">
     <div class="container">
-        <button onclick="window.location.href='./Product.html'" class="buttonC">購入者向け</button>
+        <button onclick="window.location.href='../security/html/Userlogin.php'" class="buttonC">購入者向け</button>
         <button type="button" class="buttonP" onclick="window.location.href='../security/html/ADlogin.html'">出品者向け</button>
     </div>
     <div class="footer">
