--- a/b02/html/Product.html
+++ b/b02/html/Product.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- Nếu "次へ" là sang trang giỏ/checkout thì đổi link phù hợp -->
-  <a href="cart.html" class="view-cart-btn">次へ</a>
+  <a href="cart.html" class="view-cart-btn">カート</a>
 
   <!-- Giỏ hàng ở góc -->
   <div class="cart-bar" onclick="goToCart()">
