--- a/b02/html/ProductDetails.html
+++ b/b02/html/ProductDetails.html
@@ -44,7 +44,7 @@
                         
                     </tbody>
                 </table>
-
+                <div id="pagination" class="pagination"></div>
             </div>
         </div>
     </div>
