--- a/b02/html/cart.html
+++ b/b02/html/cart.html
@@ -5,20 +5,20 @@
 <title>カート</title>
 <link rel="stylesheet" href="../css/Cart.css">
 </head>
-
+ 
 <body>
-<button class = "Back" onclick="window.location.href='Product.html'">戻る</button>
+<button class = "back" onclick="window.location.href='Product.html'">戻る</button>
 <header>🛒 カート</header>
-
+ 
 <div id="list"></div>
-
+ 
 <div class="total-box">
   合計：<span id="total">0</span>円
 </div>
-
-<button class="pay" onclick="window.location.href='Pay.html'">購入する</button>
-
-
+ 
+<button class="pay" onclick="window.location.href='Pay.html'">会計</button>
+ 
+ 
 <script src="../js/cart.js"></script>
 </body>
 </html>
