--- a/b02/html/ProductManagement.html
+++ b/b02/html/ProductManagement.html
@@ -19,15 +19,15 @@
     <div class="container">
         <div class="navigation"> 
             <span>リスト</span>
-            <span><a href="/html/ProductDetails.html">商品の詳細情報</a></span>
-            <span><a href="/html/ProductStatus.html">在庫確認</a></span>
+            <span><a href="../html/ProductDetails.html">商品の詳細情報</a></span>
+            <span><a href="../html/ProductStatus.html">在庫確認</a></span>
             <span><a>購入歴史</a></span>
             <hr>
-            <button onclick="window.location.href='/html/HomePage.html'">sign out</button>
+            <button onclick="window.location.href='../html/HomePage.html'">sign out</button>
         </div>
         <div class="body">
             <h1>商品管理</h1>
-                <button onclick="window.location.href='/html/Addproduct.html'" class="buttonAddproduct">商品追加(✙)</button>
+                <button onclick="window.location.href='../html/Addproduct.html'" class="buttonAddproduct">商品追加(✙)</button>
             <div class="Displaypage">
 
                 <table style="border: 1px solid; border-collapse: collapse;">
