--- a/b02/html/ProductDetails.html
+++ b/b02/html/ProductDetails.html
@@ -18,12 +18,12 @@
 
     <div class="container">
         <div class="navigation"> 
-            <span><a href="/html/ProductManagement.html">リスト</a></span>
+            <span><a href="../html/ProductManagement.html">リスト</a></span>
             <span>商品の詳細情報</span>
-            <span><a href="/html/ProductStatus.html">在庫確認</a></span>
+            <span><a href="../html/ProductStatus.html">在庫確認</a></span>
             <span><a>購入歴史</a></span>
             <hr>
-            <button onclick="window.location.href='/html/HomePage.html'">sign out</button>
+            <button onclick="window.location.href='../html/HomePage.html'">sign out</button>
         </div>
         <div class="body">
             <h1>商品の詳細情報</h1>
