--- a/b02/html/ProductStatus.html
+++ b/b02/html/ProductStatus.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="head">
-    <button onclick="window.location.href='/html/ProductManagement.html'" class="buttonlogo">
+    <button onclick="window.location.href='../html/ProductManagement.html'" class="buttonlogo">
       <img src="../img/Logo.jpg" alt="logo">
     </button>
 
@@ -19,12 +19,12 @@
 
   <div class="container">
     <div class="navigation">
-      <span><a href="/html/ProductManagement.html">リスト</a></span>
-      <span><a href="/html/ProductDetails.html">商品の詳細情報</a></span>
+      <span><a href="../html/ProductManagement.html">リスト</a></span>
+      <span><a href="../html/ProductDetails.html">商品の詳細情報</a></span>
       <span>在庫確認</span>
       <span><a>購入歴史</a></span>
       <hr>
-      <button onclick="window.location.href='/html/HomePage.html'">sign out</button>
+      <button onclick="window.location.href='../html/HomePage.html'">sign out</button>
     </div>
 
     <div class="body">
